examples/test/testpolicy11345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11345
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key31: value18
      key10: value33
      key7: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value24
      podSelector:
        matchLabels:
          key17: value4
          key38: value46
          key44: value30
